# store_api

./: README.md  docker-compose.yml  pyproject.toml
store/: dependencies.py  main.py  routers.py
store/controllers/: controllers_product.py
store/core/: core_exceptions.py
store/db/: db_postgres.py
store/models/: models_base.py  models_product.py
store/schemas/: schemas_base.py  schemas_product.py
store/usecases/: usecases_product.py
tests/: conftest.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
